# SIRIL

./: .~lock.command.odt#  README.md  command.odt
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/forcep/: forcep_node
devel/lib/omni_common/: 2omni_state  omni  omni_state
devel/lib/pkgconfig/: forcep.pc  omni_common.pc  omni_description.pc  omni_msgs.pc  omni_subscriber.pc  vision.pc
src/: README.md
src/SIRIL/: CmakeLists.txt  package.xml
src/SIRIL/src/: robotrun.py  train_bc.py  train_transformer.py  train_vqgan.py
src/forcep/: CMakeLists.txt
src/forcep/src/: GalilControl.cpp  GalilControl.h  forcep_node.cpp
src/omni_common/: CMakeLists.txt
src/omni_common/launch/: bc.launch  dual_phantom_dual_endeffector.launch  dual_phantom_dual_endeffector_noimage.launch  omni.launch  omni_state_force.launch  phantom_forcep.launch
src/omni_common/src/: 2omni_state.cpp  omni_state.cpp
src/omni_subscriber/: CMakeLists.txt
src/omni_subscriber/src/: FBG_connect copy.py  FBG_connect.py  calibration.py  cppFBGSDK.cpp  drawbox.py  force_feedback.py  myshow.py  omni_subscriber_node.py  omni_subscriber_node_pose.py  omni_subscriber_node_pose_velocity.py  omni_subscriber_node_record.py  realtimeshow.py  recordmouse.py  robot_arm_control.py  robot_control.py  transformations.py
src/record20240325/: l1.txt  l2.txt  l3.txt  l4.txt  r1.txt  r2.txt  r3.txt  r4.txt
src/record20240326/: l1.txt  l2.txt  r1.txt
src/siril/: robotrun.py
src/siril/scripts/: train_bc.py  train_transformer.py  train_vqgan.py
src/siril/siril/: readme.md
(+36 files in other folders)
